--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -31,7 +31,7 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $IMAGE_REPO_NAME:$IMAGE_TAG
-      - aws eks update-kubeconfig --name k8s-boy --region us-east-2
+      - aws eks update-kubeconfig --name my-cluster-micro --region us-east-2
       - echo Push the latest image to cluster
        # Get AWS Credential using STS Assume Role for kubectl
       - echo "Setting Environment Variables related to AWS CLI for Kube Config Setup"          
