--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -35,8 +35,7 @@ phases:
       - echo Push the latest image to cluster
        # Get AWS Credential using STS Assume Role for kubectl
       - echo "Setting Environment Variables related to AWS CLI for Kube Config Setup"          
-      - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
-      - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
-      - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
-      - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
+      - export AWS_ACCESS_KEY_ID="$(aws configure get aws_access_key_id)"
+      - export AWS_SECRET_ACCESS_KEY="$(aws configure get aws_secret_access_key)"
+      - export AWS_DEFAULT_REGION="$(aws configure get region)"
       - kubectl apply -f deployment.yml
