--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -31,11 +31,11 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $IMAGE_REPO_NAME:$IMAGE_TAG
-      # - aws eks update-kubeconfig --name my-cluster-micro --region us-east-2
+      - aws eks update-kubeconfig --name my-cluster-micro --region us-east-2
       # - echo Push the latest image to cluster
       #  # Get AWS Credential using STS Assume Role for kubectl
       # - echo "Setting Environment Variables related to AWS CLI for Kube Config Setup"          
       # - export AWS_ACCESS_KEY_ID="$(aws configure get aws_access_key_id)"
       # - export AWS_SECRET_ACCESS_KEY="$(aws configure get aws_secret_access_key)"
       # - export AWS_DEFAULT_REGION="$(aws configure get region)"
-      # - kubectl apply -f deployment.yml
+      - kubectl apply -f deployment.yaml
