--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -39,4 +39,4 @@ phases:
       - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
       - echo "Update Kube Config"      
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
-      - kubectl apply -f deployment.yml
+      - kubectl apply -f deployment.yaml
