--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -40,3 +40,5 @@ phases:
       - echo "Update Kube Config"      
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
       - kubectl apply -f deployment.yaml
+      - kubectl get all 
+      - kubectl get pods
