--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -32,7 +32,7 @@ phases:
       - docker push $IMAGE_REPO_NAME:$IMAGE_TAG
       - echo Push the latest image to cluster
       - echo "Setting Environment Variables related to AWS CLI for Kube Config Setup"          
-      - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)    
+      - CREDENTIALS=$(aws sts assume-role --role-arn arn:aws:iam::581355710136:role/EksCodeBuildKubectlRole --role-session-name codebuild-kubectl --duration-seconds 900)    
       - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
       - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
       - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
