--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -43,3 +43,5 @@ phases:
       - kubectl get all 
       - kubectl get pods
       - kubectl get svc
+      - helm upgrade -i kubecost oci://public.ecr.aws/kubecost/cost-analyzer --version="1.104.4" --namespace kubecost --create-namespace -f https://raw.githubusercontent.com/kubecost/cost-analyzer-helm-chart/develop/cost-analyzer/values-eks-cost-monitoring.yaml --set prometheus.configmapReload.prometheus.enabled="false"
+      - kubectl get pods -n kubecost
