--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,6 +11,10 @@ phases:
       - source ~/.bashrc
       - echo 'Check kubectl version'
       - kubectl version --short --client
+      # Install Helm
+      - curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+      - chmod +x get_helm.sh
+      - ./get_helm.sh
     
   pre_build:
     commands:
@@ -18,6 +22,11 @@ phases:
       - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 581355710136.dkr.ecr.us-east-2.amazonaws.com
       - IMAGE_REPO_NAME=581355710136.dkr.ecr.us-east-2.amazonaws.com/eks-repo
       - IMAGE_TAG=v1.0.0.RELEASE
+       # helm
+      - eksctl utils associate-iam-oidc-provider --cluster eks --approve
+      - eksctl create iamserviceaccount --name ebs-csi-controller-sa --namespace kube-system --cluster "eks" --attach-policy-arn arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy --approve --role-only --role-name AmazonEKS_EBS_CSI_DriverRole
+      - SERVICE_ACCOUNT_ROLE_ARN=$(aws iam get-role --role-name AmazonEKS_EBS_CSI_DriverRole --output json | jq -r '.Role.Arn')
+      - eksctl create addon --name aws-ebs-csi-driver --cluster "eks" --service-account-role-arn $SERVICE_ACCOUNT_ROLE_ARN --force
 
   build:
     commands:
