--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -22,11 +22,7 @@ phases:
       - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 581355710136.dkr.ecr.us-east-2.amazonaws.com
       - IMAGE_REPO_NAME=581355710136.dkr.ecr.us-east-2.amazonaws.com/eks-repo
       - IMAGE_TAG=v1.0.0.RELEASE
-       # helm
-      - eksctl utils associate-iam-oidc-provider --cluster eks --approve
-      - eksctl create iamserviceaccount --name ebs-csi-controller-sa --namespace kube-system --cluster "eks" --attach-policy-arn arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy --approve --role-only --role-name AmazonEKS_EBS_CSI_DriverRole
-      - SERVICE_ACCOUNT_ROLE_ARN=$(aws iam get-role --role-name AmazonEKS_EBS_CSI_DriverRole --output json | jq -r '.Role.Arn')
-      - eksctl create addon --name aws-ebs-csi-driver --cluster "eks" --service-account-role-arn $SERVICE_ACCOUNT_ROLE_ARN --force
+      
 
   build:
     commands:
@@ -52,5 +48,10 @@ phases:
       - kubectl get all 
       - kubectl get pods
       - kubectl get svc
+       # helm
+      # - eksctl utils associate-iam-oidc-provider --cluster eks --approve
+      # - eksctl create iamserviceaccount --name ebs-csi-controller-sa --namespace kube-system --cluster "eks" --attach-policy-arn arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy --approve --role-only --role-name AmazonEKS_EBS_CSI_DriverRole
+      # - SERVICE_ACCOUNT_ROLE_ARN=$(aws iam get-role --role-name AmazonEKS_EBS_CSI_DriverRole --output json | jq -r '.Role.Arn')
+      # - eksctl create addon --name aws-ebs-csi-driver --cluster "eks" --service-account-role-arn $SERVICE_ACCOUNT_ROLE_ARN --force
       - helm upgrade -i kubecost oci://public.ecr.aws/kubecost/cost-analyzer --version="1.104.4" --namespace kubecost --create-namespace -f https://raw.githubusercontent.com/kubecost/cost-analyzer-helm-chart/develop/cost-analyzer/values-eks-cost-monitoring.yaml --set prometheus.configmapReload.prometheus.enabled="false"
       - kubectl get pods -n kubecost
