--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -53,5 +53,5 @@ phases:
       # - eksctl create iamserviceaccount --name ebs-csi-controller-sa --namespace kube-system --cluster "eks" --attach-policy-arn arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy --approve --role-only --role-name AmazonEKS_EBS_CSI_DriverRole
       # - SERVICE_ACCOUNT_ROLE_ARN=$(aws iam get-role --role-name AmazonEKS_EBS_CSI_DriverRole --output json | jq -r '.Role.Arn')
       # - eksctl create addon --name aws-ebs-csi-driver --cluster "eks" --service-account-role-arn $SERVICE_ACCOUNT_ROLE_ARN --force
-      - helm upgrade -i kubecost oci://public.ecr.aws/kubecost/cost-analyzer --version="1.104.4" --namespace kubecost --create-namespace -f https://raw.githubusercontent.com/kubecost/cost-analyzer-helm-chart/develop/cost-analyzer/values-eks-cost-monitoring.yaml --set prometheus.configmapReload.prometheus.enabled="false"
+      - helm upgrade -i kubecost oci://public.ecr.aws/kubecost/cost-analyzer --version="1.104.4" --namespace kubecost --create-namespace -f  values-eks-cost-monitoring.yaml --set prometheus.configmapReload.prometheus.enabled="false"
       - kubectl get pods -n kubecost
