--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -15,6 +15,15 @@ phases:
       - curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
       - chmod +x get_helm.sh
       - ./get_helm.sh
+
+      # eksctl installtion 
+        - ARCH=amd64
+      - PLATFORM=$(uname -s)_$ARCH
+      - curl -sLO "https://github.com/eksctl-io/eksctl/releases/latest/download/eksctl_$PLATFORM.tar.gz"
+      - curl -sL "https://github.com/eksctl-io/eksctl/releases/latest/download/eksctl_checksums.txt" | grep $PLATFORM | sha256sum --check
+      - tar -xzf eksctl_$PLATFORM.tar.gz -C /tmp && rm eksctl_$PLATFORM.tar.gz
+      - sudo mv /tmp/eksctl /usr/local/bin
+      - eksctl version
     
   pre_build:
     commands:
