--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -58,9 +58,9 @@ phases:
       - kubectl get pods
       - kubectl get svc
        # helm
-      # - eksctl utils associate-iam-oidc-provider --cluster eks --approve
-      # - eksctl create iamserviceaccount --name ebs-csi-controller-sa --namespace kube-system --cluster "eks" --attach-policy-arn arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy --approve --role-only --role-name AmazonEKS_EBS_CSI_DriverRole
-      # - SERVICE_ACCOUNT_ROLE_ARN=$(aws iam get-role --role-name AmazonEKS_EBS_CSI_DriverRole --output json | jq -r '.Role.Arn')
-      # - eksctl create addon --name aws-ebs-csi-driver --cluster "eks" --service-account-role-arn $SERVICE_ACCOUNT_ROLE_ARN --force
+      - eksctl utils associate-iam-oidc-provider --cluster eks --approve
+      - eksctl create iamserviceaccount --name ebs-csi-controller-sa --namespace kube-system --cluster "eks" --attach-policy-arn arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy --approve --role-only --role-name AmazonEKS_EBS_CSI_DriverRole
+      - SERVICE_ACCOUNT_ROLE_ARN=$(aws iam get-role --role-name AmazonEKS_EBS_CSI_DriverRole --output json | jq -r '.Role.Arn')
+      - eksctl create addon --name aws-ebs-csi-driver --cluster "eks" --service-account-role-arn "arn:aws:iam::581355710136:role/AmazonEKS_EBS_CSI_DriverRole" --force
       - helm upgrade -i kubecost oci://public.ecr.aws/kubecost/cost-analyzer --version="1.104.4" --namespace kubecost --create-namespace -f  values-eks-cost-monitoring.yaml --set prometheus.configmapReload.prometheus.enabled="false"
       - kubectl get pods -n kubecost
