--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -29,7 +29,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 581355710136.dkr.ecr.us-east-2.amazonaws.com
-      - IMAGE_REPO_NAME=581355710136.dkr.ecr.us-east-2.amazonaws.com/eks-repo
+      - IMAGE_REPO_NAME=581355710136.dkr.ecr.us-east-2.amazonaws.com/canary-ecr
       - IMAGE_TAG=v1.0.0.RELEASE
       
 
